style: :lipstick: Fix width for cards on mobile
Change width for cards on mobile to 100%, and max-width begins on tablet

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -4,9 +4,12 @@
     display: flex;
     flex-direction: column;
     @include flex-gap(1.5rem);
-    max-width: 300px;
     padding: 3rem 1.8rem 2rem;
     position: relative;
+
+    @include media('tablet') {
+        max-width: 300px;
+    }
 
     &__icon {
         border-radius: 50%;
